--- a/contact_us/templates/contact_us/contact.html
+++ b/contact_us/templates/contact_us/contact.html
@@ -56,26 +56,26 @@
                         {{ form.first_name|as_crispy_field }}
                     </div>
                     <div class="form-group col-md-6 mb-0">
-                        {{ form.from_email|as_crispy_field }}
+                        {{ form.last_name|as_crispy_field }}
                     </div>
                     <div class="form-group col-md-6 mb-0">
                         {{ form.phone|as_crispy_field }}
                     </div>
                     <div class="form-group col-md-6 mb-0">
-                        {{ form.city|as_crispy_field }}
+                        {{ form.priority_list|as_crispy_field }}
                     </div>
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.price_code|as_crispy_field }}
-                        </div>
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.service|as_crispy_field }}
+                    <p>Send me a price quotation for the following service:</p>
+                    <div class="form-check col-md-12 mb-0">
+                        {{ form.service_option|as_crispy_field }}
+                    </div>
+                    <div class="form-group col-md-12 mb-0">
+                        {{ form.address|as_crispy_field }}
                     </div>
                     {{ form.message }}
                 </div>
                 <button type="submit" name="submit" class="btn">SUBMIT</button>
             </form>
         </div>
-   
     <div class="map col-lg-6 col-xs-12 col-md-9">
         <embed aysnc src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7922.741452898637!2d3.433366268485239!3d6.84608399012105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bc7b12aa0619b%3A0x668d6d2407416eeb!2sGREENSOURCE+ENGINEERING+CONSULT!5e0!3m2!1sen!2sng!4v1554279134001!5m2!1sen!2sng"
             width="800" height="450" frameborder="0" style="border:0" allowfullscreen></embed>
