--- a/templates/500.html
+++ b/templates/500.html
@@ -22,7 +22,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}" />
     <link rel="manifest" href="/site.webmanifest" />
     <link  rel="stylesheet" href='https://fonts.googleapis.com/css?family=Poppins|Play|Big+Shoulders+Text' />
-    <link rel="stylesheet" type="text/css" href="https://cdn.wpcc.io/lib/1.0.2/cookieconsent.min.css" />
+    <link rel="preload" fetchpriority="high" as="image" href="/static/images/greensourcelogo3.webp" type="image/webp" />
+    <link rel="preload" fetchpriority="low" as="image" href="/static/images/homepage2.webp" type="image/webp" />
 </head>
 <body>
     <div class="container-fluid padding">
