--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -77,12 +77,13 @@
     <div class="container padding">
         <div class="row col padding">
             <div class="landing-page">
-                
                 <p class="description">This Solar hybrid system Home Solution gives optimum satisfaction, illuminates your home, Powers all critical
-                    home appliances. The solar systems can be used for  Residential and Commercial applications.<br/> 
-                    <!-- <span><strong>{{ landingpage.name }}</strong></span> -->
+                    home appliances. The solar systems can be used for  Residential and Commercial applications.
                 </p>
-            
+                {% for landingpage in template.landingpage %}
+                <p class="description"><span><strong>{{ landingpage.name }}</strong></span>
+                </p>
+                {% endfor %}
             </div>
         </div>
         <div class="row padding">
