--- a/greensource_pages/templates/greensource_pages/pricing.html
+++ b/greensource_pages/templates/greensource_pages/pricing.html
@@ -80,10 +80,8 @@
                 <p class="description">This Solar hybrid system Home Solution gives optimum satisfaction, illuminates your home, Powers all critical
                     home appliances. The solar systems can be used for  Residential and Commercial applications.
                 </p>
-                {% for landingpage in template.landingpage %}
-                <p class="description"><span><strong>{{ landingpage.name }}</strong></span>
+                <p class="description"><span><strong>ENJOY MASSIVE 10% OFF OCTOBER PROMO DISCOUNT.</strong></span>
                 </p>
-                {% endfor %}
             </div>
         </div>
         <div class="row padding">
